--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 *****Development*****
 
-Re-making a food web-app that will be built in DJANGO. 
+Re-making a food web-app that will be built in DJANGO. Some additional stuff.
